<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_actividad">

    <EditText
        android:id="@+id/editBuscarDni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/vertical_margin_linear"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="Ej. 99999999"
        android:inputType="number"
        android:minHeight="48dp"

        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editBuscarDni"
        android:layout_marginStart="36dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/editBuscarDni"
        android:text="Buscar"
        app:layout_constraintStart_toEndOf="@+id/editBuscarDni"
        app:layout_constraintTop_toTopOf="@+id/editBuscarDni" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editBuscarDni"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/vertical_margin_linear"
        android:layout_marginTop="42dp"
        android:text="@string/dni"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editBuscarDni"
        app:layout_constraintTop_toBottomOf="@+id/editBuscarDni"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/vertical_margin_linear"
        android:layout_marginTop="@dimen/separation_labels"
        android:text="@string/apellidos"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/vertical_margin_linear"
        android:layout_marginTop="@dimen/separation_labels"
        android:text="@string/fecha_de_nacimiento"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/vertical_margin_linear"
        android:layout_marginTop="@dimen/separation_labels"
        android:text="@string/colegio"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/vertical_margin_linear"
        android:layout_marginTop="@dimen/separation_labels"
        android:text="@string/carrera"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/vertical_margin_linear"
        android:layout_marginTop="@dimen/separation_labels"
        android:text="@string/nombres"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editDni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editBuscarDni"
        android:layout_alignEnd="@+id/btnBuscar"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:autofillHints=""
        android:ems="9"
        android:hint="@string/dni"
        android:inputType="number"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editNombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editDni"
        android:layout_alignEnd="@+id/btnBuscar"
        android:layout_marginTop="@dimen/separation_boxes"
        android:layout_marginEnd="0dp"
        android:ems="9"
        android:hint="@string/nombres"
        android:inputType="text"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editDni"
        app:layout_constraintTop_toBottomOf="@+id/editDni"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editNombres"
        android:layout_alignEnd="@+id/btnBuscar"
        android:layout_marginTop="@dimen/separation_boxes"
        android:layout_marginEnd="0dp"
        android:ems="9"
        android:hint="@string/apellidos"
        android:inputType="text"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editDni"
        app:layout_constraintTop_toBottomOf="@+id/editNombres"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editApellidos"
        android:layout_alignEnd="@+id/btnBuscar"
        android:layout_marginTop="@dimen/separation_boxes"
        android:layout_marginEnd="0dp"
        android:ems="9"
        android:hint="@string/fecha_de_nacimiento"
        android:inputType="date"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editDni"
        app:layout_constraintTop_toBottomOf="@+id/editApellidos"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editColegio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editBirthday"
        android:layout_alignEnd="@+id/btnBuscar"
        android:layout_marginTop="@dimen/separation_boxes"
        android:layout_marginEnd="0dp"
        android:ems="9"
        android:hint="@string/colegio"
        android:inputType="date"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editDni"
        app:layout_constraintTop_toBottomOf="@+id/editBirthday"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editCarrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editColegio"
        android:layout_alignEnd="@+id/btnBuscar"
        android:layout_marginTop="@dimen/separation_boxes"
        android:layout_marginEnd="0dp"
        android:ems="9"
        android:hint="@string/carrera"
        android:inputType="date"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editDni"
        app:layout_constraintTop_toBottomOf="@+id/editColegio"
        tools:ignore="DuplicateSpeakableTextCheck" />

</RelativeLayout>